--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ h6,
 
 h1 {
   font-size: 46px;
-  color: #FFFFFF;
+  color: #fff;
   line-height: 48px;
   display: inline-flex;
 }
@@ -45,7 +45,7 @@ h1 {
 h2 {
   font-weight: bold;
   font-size: 28px;
-  color: #5AA6DA;
+  color: #5aa6da;
   line-height: 29px;
   padding: 10px;
   text-transform: uppercase;
@@ -61,7 +61,7 @@ h3 {
 h4 {
   font-weight: bold;
   font-size: 20px;
-  color: #4BB1FF;
+  color: #4bb1ff;
   line-height: 17px;
 }
 
@@ -81,13 +81,13 @@ h5 {
 .edu-title {
   font-style: italic;
   font-size: 25px;
-  color: #05041F;
+  color: #05041f;
 }
 
 /* Navigation Bar Styling */
 #nav-bar {
   width: 100%;
-  background-color: #05041F;
+  background-color: #05041f;
   overflow: hidden;
   box-shadow: 0 5px 8px rgba(0, 0, 0, 0.3);
 }
@@ -105,7 +105,7 @@ h5 {
 li a:hover:not(.active) {
   transition: background-color 0.2s ease-out;
   background-color: #233151;
-  color: #05041F;
+  color: #05041f;
 }
 
 #nav-bar ul {
@@ -163,7 +163,7 @@ p {
 }
 
 a {
-  color: #CC665F;
+  color: #cc665f;
   text-decoration: none;
   display: block;
   padding: 10px 0 5px;
@@ -172,7 +172,7 @@ a {
 .hrole {
   display: inline-flex;
   padding-left: 10px;
-  color: #6DA9CF;
+  color: #6da9cf;
   font-size: 20px;
 }
 
@@ -184,16 +184,16 @@ a {
 }
 
 #skills-h3 {
-  color: #CC6B67;
+  color: #cc6b67;
   display: none;
 }
 
 .dark {
-  background-color: #05041F;
+  background-color: #05041f;
 }
 
 .dark-text {
-  color: #05041F;
+  color: #05041f;
 }
 
 .white-text {
@@ -208,12 +208,12 @@ a {
 }
 
 .light-blue {
-  background-color: #6DA9CF;
+  background-color: #6da9cf;
 }
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #05041F;
+  background-color: #05041f;
 }
 
 .flex-box {
